compiler/testData/diagnostics/tests/multiplatform/checkNoActualForExpectInLastModule.fir.kt
// RUN_PIPELINE_TILL: FIR2IR
// ISSUE: KT-58483
// MODULE: common
<!NO_ACTUAL_FOR_EXPECT{JVM}!>expect<!> class A

// MODULE: platform()()(common)
